# fastapi-blog-dashboard

./: pyproject.toml  requirements.txt
app/: main.py
app/configs/: database.py  dependency.py  mail.py  settings.py
app/exceptions/: handlers.py
app/routes/: auth.py  blog.py  contact.py
app/routes/admin/: blog.py  contact.py  trash.py
app/schemas/: auth_schema.py  blog_schema.py  contact_schema.py  trash_schema.py
app/services/: auth_service.py  blog_service.py  contact_service.py  token_service.py  trash_service.py
app/templates/: index.html
app/templates/email/: contact_created.html  email_verification.html  password_reset.html
app/utils/: aggregate_pipelines.py  auth.py  blog.py  contact.py  datetime_formatter.py  mail.py  response_sanitizer.py  serializers.py  shortcuts.py
